Preserve deterministic class discovery order